Some memoranda spotings fixed